# dmg2img-cmake

./: CMakeLists.txt
src/: dmg2img.c
